--- a/css/layout.css
+++ b/css/layout.css
@@ -342,7 +342,3 @@ span.red {
 	font-weight: bold;
 	text-decoration: none;
 }
-
-#gameDemos td img {
-	vertical-align: middle;
-}
